--- a/phylogene_app/templates/neighbor_joining.html
+++ b/phylogene_app/templates/neighbor_joining.html
@@ -5,10 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-{{tab_distance}}
+{{labels}}
 <br/>
-{{index_sommet}}
+{{branche}}
 <br/>
-{{reverse_index}}
+{{nom_noeud}}
 </body>
 </html>
