--- a/phylogene_app/templates/test2.html
+++ b/phylogene_app/templates/test2.html
@@ -5,16 +5,7 @@
     </head>
 
 <body>
-
-{% for elmt in matrice %}
-{{ elmt }}
+{{entete_colonne_selected}}
 <br/>
-{% endfor %}
-<br/>
-Tableau de distance:
-<br/>
-{{ tab_distance }}
-<br/>
-{{ labelSeq }}
 </body>
 </html>
