--- a/phylogene_app/templates/base.html
+++ b/phylogene_app/templates/base.html
@@ -1,5 +1,6 @@
-{% load static %}
 <html>
+{% load static %}
+
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE-Edge">
@@ -42,7 +43,7 @@
             <div id="content">
                 <br/>
                 <br/>
-              <div class="content container">
+              <div class="container">
                       {% block content %}
                       {% endblock %}
               </div>
