--- a/phylogene_app/templates/boxplot.html
+++ b/phylogene_app/templates/boxplot.html
@@ -1,55 +1,51 @@
 {% extends 'base.html' %}
 {% block content %}
-<div id="container" style="height: 400px; margin: auto; min-width: 310px; max-width: 600px"></div>
+ <div id="myDiv">
+ </div>
+<style>
+#myDiv
+{
+        background-color: #ffffff;
+}
+</style>
 {% endblock %}
 
 
 {%block javascripts %}
 {{block.super}}
-<script src="https://code.highcharts.com/highcharts.js"></script>
-<script src="https://code.highcharts.com/highcharts-more.js"></script>
-<script src="https://code.highcharts.com/modules/exporting.js"></script>
-<script src="https://code.highcharts.com/modules/export-data.js"></script>
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 <script>
-Highcharts.chart('container', {
-
-    chart: {
-        type: 'boxplot'
-    },
-
-    title: {
-        text: 'Highcharts Box Plot Example'
-    },
-
-    legend: {
-        enabled: false
-    },
-
-    xAxis: {
-        categories:  ['1','2'],
-        title: {
-            text: 'Experiment No.'
-        }
-    },
-
-    yAxis: {
-        title: {
-            text: 'Observations'
-        },
-    },
-
-    series: [
-    {
-        name: 'Observations',
-        data:
-        [
-         [2, 2, 3, 2, 2, 3, 3, 3, 3],
-         [6, 4, 3, 2, 10, 3, 3, 3, 3]
-        ],
-
-    },
-    ]
+var data={{data}};
+var cpt=0;
+var entete={{entete_colonne_selected | safe }};
+results=[];
+data.forEach(function(element)
+{
+  var trace =
+  {
+      y: element,
+      type: 'box',
+      name: entete[cpt],
+      boxpoints: 'all',
+      jitter: 0.5,
+      whiskerwidth: 0.2,
+      fillcolor: 'cls',
+      marker:
+      {
+          size: 2
+      },
+      line:
+      {
+          width: 1
+      }
+  };
+ results.push(trace);
+ cpt+=1;
 
 });
+
+Plotly.newPlot('myDiv', results);
+
+
 </script>
 {% endblock %}
