--- a/phylogene_app/templates/kruskal.html
+++ b/phylogene_app/templates/kruskal.html
@@ -1,14 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-{{tab_distance}}
-<br/>
-{{index_sommet}}
-<br/>
-{{reverse_index}}
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+
+  <script src="http://visjs.org/dist/vis.js"></script>
+  <link href="http://visjs.org/dist/vis.css" rel="stylesheet" type="text/css" />
+
+ <div id="graph"></div>
+<style>
+#graph
+{
+        background-color: #ffffff;
+}
+</style>
+{% endblock%}
+{%block javascripts %}
+{{block.super}}
+<script type="text/javascript">
+var table= {{minimal_tree | safe}};
+
+labelSeq={{label_reduce | safe}};
+var nodes=[];
+var dico= new Map();
+labelSeq.forEach(function(element,i)
+{
+    dico.set(element,i);
+    nodes.push({id:i ,label:element,font:{size:15,align:'middle'},shape: 'circle'});
+});
+var edges = [];
+
+table.forEach(function(element)
+{
+
+    var str=element.replace(/ /g,"");
+    str= str.replace(/'/g,"");
+    str=str.replace(/[()]/g,"");
+    array=str.split(",");
+    edges.push({from: dico.get(array[1]),to: dico.get(array[2]),label:array[0]});
+
+});
+
+   var container = document.getElementById('graph');
+   var data = {
+    nodes: nodes,
+    edges: edges,
+   };
+
+   var options = {physics:{enabled:false}};
+   var graph = new vis.Network(container, data, options);
+</script>
+{% endblock%}
