--- a/phylogene_app/templates/neighbor_joining.html
+++ b/phylogene_app/templates/neighbor_joining.html
@@ -1,14 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-{{labels}}
-<br/>
-{{branche}}
-<br/>
-{{nom_noeud}}
-</body>
-</html>
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
+
+
+<div id="svgCanvas"> </div>
+<style>
+#svgCanvas
+{
+    background-color: #ffffff;
+}
+</style>
+
+{% endblock %}
+
+{%block javascripts %}
+{{block.super}}
+<script src="{% static 'js/raphael-min.js' %}"></script>
+<script src="{% static 'js/jsphylosvg-min.js' %}"></script>
+<script>
+    str_newick="{{labels}}"+";";
+    dataObject={newick: str_newick};
+    phylocanvas = new Smits.PhyloCanvas
+    (
+    dataObject,
+    'svgCanvas',
+    1000, 1000
+    );
+</script>
+{% endblock %}
