--- a/phylogene_app/templates/upgma.html
+++ b/phylogene_app/templates/upgma.html
@@ -1,14 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
 
-{{labelSeq}}
-<br/>
 
-{{ algo_upgma }}
-</body>
-</html>
+<div id="svgCanvas"> </div>
+<style>
+#svgCanvas
+{
+    background-color: #ffffff;
+}
+</style>
+
+{% endblock %}
+
+{%block javascripts %}
+{{block.super}}
+<script src="{% static 'js/raphael-min.js' %}"></script>
+<script src="{% static 'js/jsphylosvg-min.js' %}"></script>
+<script>
+    str_nexus="{{algo_upgma}}"+";";
+    dataObject={newick: str_nexus};
+    phylocanvas = new Smits.PhyloCanvas
+    (
+    dataObject,
+    'svgCanvas',
+    1000, 1000
+    );
+</script>
+{% endblock %}
