algo pca entropy etc

--- a/phylogene_app/templates/import_data.html
+++ b/phylogene_app/templates/import_data.html
@@ -24,6 +24,7 @@
 </div>
 </div>
 {% if info_submit %}
+
 <div class="container">
 <div id="tab_data" class="row">
 <form  id="form1" autocomplete="off" method="POST" action="">
@@ -61,9 +62,8 @@
     <input id="submit3" name="neighbor-joining"   class="btn btn-primary" type="submit" value="neighbor-joining" onclick="this.form.submited=this.value;" >
     <input id="submit4" name="boxplot"   class="btn btn-primary" type="submit" value="boxplot" onclick="this.form.submited=this.value;" >
     <input id="submit5" name="heatmap"   class="btn btn-primary" type="submit" value="heatmap" onclick="this.form.submited=this.value;" >
-    <input id="submit6" name="test"   class="btn btn-primary" type="submit" value="test" onclick="this.form.submited=this.value;" >
-
-
+    <input id="submit6" name="pca"   class="btn btn-primary" type="submit" value="pca" onclick="this.form.submited=this.value;" >
+    <input id="submit7" name="enthropie"   class="btn btn-primary" type="submit" value="enthropie" onclick="this.form.submited=this.value;" >
 
 </form>
 </div>
