--- a/phylogene_app/templates/base.html
+++ b/phylogene_app/templates/base.html
@@ -2,6 +2,7 @@
 {% load static %}
 
     <head>
+    {% block head %}
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE-Edge">
         <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -11,7 +12,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="https://cdn.datatables.net/v/dt/dt-1.10.13/se-1.2.0/datatables.min.css">
-
+    {% endblock %}
         <title>Phylogène</title>
 
     </head>
@@ -287,7 +288,7 @@
         $('.toggle').on('click', function() {
         $('.menu').toggleClass('active');
         });
-        </script>
+</script>
 
       {% endblock %}
     </body>
