pas de changement

--- a/phylogene_app/templates/intro.html
+++ b/phylogene_app/templates/intro.html
@@ -158,7 +158,7 @@
 					<img src="../static/img/djangologo.png" alt="django" width="68" height="35" border="0">				</a>&nbsp;
 				<a href="https://getbootstrap.com/" target="_blank">
 					<img src="../static/img/bootstraplogo.png" alt="bootstrap" width="68" height="35" border="0">				</a>&nbsp;				
-				<a href="https://getbootstrap.com/" target="_blank">
+				<a href="https://www.python.org/" target="_blank">
 					<img src="../static/img/pythonlogo.jpg" alt="bootstrap" width="68" height="35" border="0">				</a>&nbsp;				
 					</div>
 				</td>
