--- a/phylogene_app/templates/base.html
+++ b/phylogene_app/templates/base.html
@@ -121,7 +121,9 @@
             <a href="https://www.djangoproject.com/" target="_blank">
             <img src="../static/img/djangologo.png" alt="django" width="68" height="35" border="0">				</a>&nbsp;
             <a href="https://getbootstrap.com/" target="_blank">
-            <img src="../static/img/bootstraplogo.png" alt="bootstrap" width="68" height="35" border="0">				</a>&nbsp;				
+            <img src="../static/img/bootstraplogo.png" alt="bootstrap" width="68" height="35" border="0">				</a>&nbsp;
+            <a href="https://www.python.org/" target="_blank">
+            <img src="../static/img/pythonlogo.jpg" alt="bootstrap" width="68" height="35" border="0">				</a>&nbsp;				
             </div>
             </td>
             </tr>
