Colonne checkbox + Select all checkboxes
La dispostition du tableau a été modifié et une checkboxe à été placé dans le header afin de créer une colonne checkboxe.
Cette dernière doit nous permettre de cocher/dé-cocher toutes les checkboxes de la colonne en 1 clic.

--- a/phylogene_app/templates/import_data.html
+++ b/phylogene_app/templates/import_data.html
@@ -38,19 +38,21 @@
 
     <thead>
      <tr>
+        <th><input type="checkbox"></th>
     {% for column in row %}
         <th>{{column}}</th>
     {% endfor %}
     </tr>
-    <tr class="column-selector">
+    <!-- <tr class="column-selector">
     {% for column in row %}
     <th > <input type="checkbox"> </th>
     {% endfor %}
-    </tr>
+    </tr> -->
     </thead>
     <tbody>
     {% else %}
     <tr>
+        <td > <input type="checkbox"> </td>
     {% for column in row %}
         <td>{{column}}</td>
     {% endfor %}
@@ -220,6 +222,43 @@ $(document).on('submit','#form1',function(e)
         }
     });
 
+});
+</script>
+
+<script>
+    //select all checkbox
+
+    let example = $('#example').DataTable({
+    columnDefs: [{
+        orderable: false,
+        className: 'select-checkbox',
+        targets: 0
+    }],
+    select: {
+        style: 'os',
+        selector: 'td:first-child'
+    },
+    order: [
+        [1, 'asc']
+    ]
+});
+example.on("click", "th.select-checkbox", function() {
+    if ($("th.select-checkbox").hasClass("selected")) {
+        example.rows().deselect();
+        $("th.select-checkbox").removeClass("selected");
+    } else {
+        example.rows().select();
+        $("th.select-checkbox").addClass("selected");
+    }
+}).on("select deselect", function() {
+    ("Some selection or deselection going on")
+    if (example.rows({
+            selected: true
+        }).count() !== example.rows().count()) {
+        $("th.select-checkbox").removeClass("selected");
+    } else {
+        $("th.select-checkbox").addClass("selected");
+    }
 });
 </script>
 
