--- a/phylogene_app/templates/import_data.html
+++ b/phylogene_app/templates/import_data.html
@@ -38,21 +38,20 @@
 
     <thead>
      <tr>
-        <th><input type="checkbox"></th>
+         
     {% for column in row %}
         <th>{{column}}</th>
     {% endfor %}
     </tr>
-    <!-- <tr class="column-selector">
+    <tr class="column-selector">
     {% for column in row %}
     <th > <input type="checkbox"> </th>
     {% endfor %}
-    </tr> -->
+    </tr>
     </thead>
     <tbody>
     {% else %}
     <tr>
-        <td > <input type="checkbox"> </td>
     {% for column in row %}
         <td>{{column}}</td>
     {% endfor %}
@@ -88,11 +87,18 @@
     margin: 0;
     width: 100% !important;
 }
-.files input:focus{     outline: 2px dashed #92b0b3;  outline-offset: -10px;
+
+.files input:focus{    
+    outline: 2px dashed #92b0b3;  
+    outline-offset: -10px;
     -webkit-transition: outline-offset .15s ease-in-out, background-color .15s linear;
     transition: outline-offset .15s ease-in-out, background-color .15s linear; border:1px solid #92b0b3;
  }
-.files{ position:relative}
+
+.files { 
+    position:relative
+}
+
 .files:after {  pointer-events: none;
     position: absolute;
     top: 60px;
@@ -107,7 +113,10 @@
     background-size: 100%;
     background-repeat: no-repeat;
 }
-.color input{ background-color:#f1f1f1;}
+.color input { 
+    background-color:#f1f1f1;
+}
+
 .files:before {
     position: absolute;
     bottom: 5px;
@@ -123,16 +132,16 @@
     text-transform: capitalize;
     text-align: center;
 }
-#tab_data
-{
+
+#tab_data {
 background-color: #ffffff;
 }
-table
-{
+
+table {
 color:#0073e6;
 font-size: 16px;
-
 }
+
 .column-selector th {
   cursor: pointer;
 }
@@ -148,6 +157,7 @@ var data_column_selected=[];
 var column_name_selected=[];
 var index_column_name_selected=[];
 var label=[];
+
 $(document).ready(function (){
     var table = $('#example').DataTable({
        'ordering':false,
@@ -155,6 +165,7 @@ $(document).ready(function (){
        'searching':true,
        'select': 'multi'
     });
+    
      table.column(0).data().each( function ( value, index )
        {
         label.push(value);
@@ -169,6 +180,7 @@ $(document).ready(function (){
         if(this.checked)
         {
             table.column(colIdx).select();
+            
         }
         else
         {
@@ -222,43 +234,6 @@ $(document).on('submit','#form1',function(e)
         }
     });
 
-});
-</script>
-
-<script>
-    //select all checkbox
-
-    let example = $('#example').DataTable({
-    columnDefs: [{
-        orderable: false,
-        className: 'select-checkbox',
-        targets: 0
-    }],
-    select: {
-        style: 'os',
-        selector: 'td:first-child'
-    },
-    order: [
-        [1, 'asc']
-    ]
-});
-example.on("click", "th.select-checkbox", function() {
-    if ($("th.select-checkbox").hasClass("selected")) {
-        example.rows().deselect();
-        $("th.select-checkbox").removeClass("selected");
-    } else {
-        example.rows().select();
-        $("th.select-checkbox").addClass("selected");
-    }
-}).on("select deselect", function() {
-    ("Some selection or deselection going on")
-    if (example.rows({
-            selected: true
-        }).count() !== example.rows().count()) {
-        $("th.select-checkbox").removeClass("selected");
-    } else {
-        $("th.select-checkbox").addClass("selected");
-    }
 });
 </script>
 
