test devient testbact

--- a/phylogene_app/templates/kruskal.html
+++ b/phylogene_app/templates/kruskal.html
@@ -78,10 +78,10 @@ for(var i = 0; i < lastItem.length; i += 1) {
 
 
 
-labelSeq.forEach(function(element,i,color,groupname,test)
+labelSeq.forEach(function(element,i,color,groupname,testbact)
 {
   
-  dico.set(element,i,color,groupname,test);
+  dico.set(element,i,color,groupname,testbact);
     // nodes.push({id:i ,label:element,font:{size:15,align:'middle'},shape: 'circle'});
     testbact = element.split("+");
     
