--- a/phylogene_app/templates/import_data.html
+++ b/phylogene_app/templates/import_data.html
@@ -2,7 +2,12 @@
 
 {% block content %}
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+
+
 
 <div style="margin-top:15%;">
 {% if error %}
@@ -29,8 +34,8 @@
 {% if info_submit %}
 
 <div class="container">
-<div id="tab_data" class="row">
-<form  id="form1" autocomplete="on" method="POST" action="">
+<div id="tab_data" class="row" style="position: relative; overflow: scroll; width: 100%; max-height: 350px; height: 350px;">
+<form  id="form1" autocomplete="off" method="POST" action="">
     {% csrf_token %}
     <table id="example" class="display" cellspacing="0">
     {% for row in fichier %}
@@ -67,6 +72,7 @@
     {% endfor %}
     </tbody>
     </table>
+</div>
     <!--le onclick permet de savoir le nom du button submited-->
     <input id="submit1" name="kruskal" class="btn btn-primary" type="submit" value="kruskal" onclick="this.form.submited=this.value;" >
     <input id="submit2" name="upgma"   class="btn btn-primary" type="submit" value="upgma" onclick="this.form.submited=this.value;" >
@@ -75,9 +81,9 @@
     <input id="submit5" name="heatmap"   class="btn btn-primary" type="submit" value="heatmap" onclick="this.form.submited=this.value;" >
     <input id="submit6" name="pca"   class="btn btn-primary" type="submit" value="pca" onclick="this.form.submited=this.value;" >
     <input id="submit7" name="enthropie"   class="btn btn-primary" type="submit" value="enthropie" onclick="this.form.submited=this.value;" >
-
+    <input id="submit8" name="chart"   class="btn btn-primary" type="submit" value="chart" onclick="this.form.submited=this.value;" >
 </form>
-</div>
+
 <br/>
 <br/>
 </div>
@@ -164,11 +170,17 @@ var data_column_selected=[];
 var column_name_selected=[];
 var index_column_name_selected=[];
 var label=[];
+
 var table = $('#example').DataTable({
        'ordering':false,
        'paging':true,
        'searching':true,
-       'select': 'multi'
+       'select': 'multi',
+        
+        scrollCollapse: true,
+        fixedColumns:   {
+            left: 1
+        }
     });
 var checkboxes = document.querySelectorAll("input[type = 'checkbox']");
 
