--- a/phylogene_app/templates/kruskal.html
+++ b/phylogene_app/templates/kruskal.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 
 {% block content %}
 
@@ -6,7 +6,7 @@
   <script src="https://unpkg.com/vis-network@9.1.1/standalone/umd/vis-network.min.js"></script>
 
   <!-- <link href="http://visjs.org/dist/vis.css" rel="stylesheet" type="text/css" /> -->
-  <link href="https://unpkg.com/browse/vis-network@9.1.1/styles/vis-network.min.css" rel="stylesheet" type="text/css" />
+  <!-- <link href="https://unpkg.com/browse/vis-network@9.1.1/styles/vis-network.min.css" rel="stylesheet" type="text/css" /> -->
   <link rel="stylesheet" href="../static/css/bootstrap.min.css">
   
 
@@ -45,7 +45,7 @@
 }
 </style>
 {% endblock%}
-{%block javascripts %}
+{%block javascript %}
 
 <script type="text/javascript">
 
@@ -128,7 +128,7 @@ for(var i = 0; i < lastItem.length; i += 1) {
 
 
 for (var i = 0; i < Object.keys(mapcolor).length; i++) {
-  var container = document.getElementById('graph');
+  var container = document.getElementById("graph");
   var x = -container.clientWidth / 2 + -1000;
   var y = -container.clientHeight / 2 + 50;
   // var x = -container.clientWidth / 2 + 50;
@@ -139,7 +139,7 @@ for (var i = 0; i < Object.keys(mapcolor).length; i++) {
         label: Object.keys(mapcolor)[i],
         font:{size:15,align:'middle'},
         color: mapcolor[Object.keys(mapcolor)[i]],
-        shape: 'square',
+        shape: "square",
         x: x,
         y: y + i * step,
 // ​​    groupname: maptype[testbact[0]],
@@ -156,7 +156,7 @@ labelSeq.forEach(function(element,i,color,groupname,testbact)
   
 
   dico.set(element,i,color,groupname,testbact);
-    // nodes.push({id:i ,label:element,font:{size:15,align:'middle'},shape: 'circle'});
+    // nodes.push({id:i ,label:element,font:{size:15,align:"middle"},shape: 'circle'});
     testbact = element.split("+");
     
     nodes.push({
@@ -186,7 +186,6 @@ table.forEach(function(element)
 });
 
 var container = document.getElementById('graph');
-
    var data = {
     nodes: nodes,
     edges: edges,
@@ -197,15 +196,14 @@ var container = document.getElementById('graph');
 var options = {
   physics:{
     enabled:true,
-    
-  },
+    },
   // configure: {
   //       container: document.getElementById("config"),
   //       showButton: false,
   //     },
   configure: {
     enabled: true,
-    filter: 'nodes',
+    filter: "nodes",
     container: document.getElementById("config"),
     showButton: false,
   },
@@ -221,18 +219,59 @@ var options = {
   //   shadow: true,
   //   smooth: true,
   // }
-
-  
-  
 };
 
-
-  var graph = new vis.Network(container, data, options);
-
+var graph = new vis.Network(container, data, options);
    //information colonne
-   
   // var tableData = $('#example').DataTable();
   // var allData = table.columns().data();
+
+// Début HGDI
+var numberstraintested = lastItem.length ;
+
+var difftypenum = [], count = 0, i = 0;
+for(i=0; i<lastItem.length; i++) {
+    if(difftypenum[lastItem[i]] == undefined) {
+        difftypenum[lastItem[i]] = 1;
+        count++;
+    }
+}
+//console.log(count);
+//test comptage
+var numberstrainpertype = {};
+lastItem.forEach(function (x) { numberstrainpertype[x] = (numberstrainpertype[x] || 0) + 1; });
+
+var sum = 0;
+
+for (const [key, value] of Object.entries(numberstrainpertype)) {
+    console.log(`${key}: ${value}`);
+    //sum =  ${value} ;
+}
+
+//tester dans la console : Object.values(numberstrainpertype).forEach(val => console.log(val));
+
+// fin test
+
+//début fonction calcul somme des souches
+
+function sumStrain(a){
+    var total=0;
+    for(var i in a) {
+        total += a[i]*(a[i]-1);
+    }
+    return total;
+}
+
+//fin fonction calcul somme des souches
+
+var SumNumbDiffStrain = sumStrain(numberstrainpertype) ;
+
+var hdgi1 = 1 / (numberstraintested * (numberstraintested-1));
+
+var hdgi2 = 1-(hdgi1 * SumNumbDiffStrain) ;
+
+// Fin HGDI
+
 </script>
 {% endblock%}
 
